@@ -4,6 +4,7 @@ CHANGELOG
 2006-12-10  Robert Ancell  <bob27@users.sourceforge.net>
 	* Enable accidentally disabled GConf support.
 	* Save window size to configuration.
+	* Fix incorrect UCI 'position' command.
 
 2006-12-09  Dennis Cranston  <dennis_cranston@yahoo.com>
 
